--- a/notebooks/stats_analyses.ipynb
+++ b/notebooks/stats_analyses.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c1545173-045e-41fc-8d94-67950f7d040f",
    "metadata": {},
@@ -33,11 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "712a3a03-2ca0-45cf-a430-d9fbcf5a5e39",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTS\n",
+    "import os\n",
+    "import shutil\n",
+    "import time\n",
+    "import sys\n",
+    "import random\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors\n",
@@ -48,6 +54,13 @@
     "import pandas as pd\n",
     "\n",
     "from scipy import stats\n",
+    "\n",
+    "from termcolor import colored, cprint\n",
+    "# Termcolor guide: https://pypi.org/project/termcolor/\n",
+    "\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
     "\n",
     "%matplotlib widget\n",
     "# %matplotlib inline\n",
@@ -61,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f07a0f49-5fd0-4c26-a36d-2704247b9470",
    "metadata": {},
@@ -149,7 +161,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ff3a4def-c8e8-4906-9a26-81c0042ce97b",
    "metadata": {},
@@ -293,14 +304,6 @@
     "print(f\"TEST: steps to converge [sect2X no init]~[sect2O pilot init]   \\t HYPOTHESIS: improvement \\t STATISTIC: {result_steps_to_conv.statistic:.01f} \\t P-VALUE: {result_steps_to_conv.pvalue:.06f}\")\n",
     "print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "069447ce-d842-4bfa-a441-96fca6eb9299",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
