added histogram plots

--- a/notebooks/stats_analyses.ipynb
+++ b/notebooks/stats_analyses.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# %cd /home/liamroy/Documents/PHD/repos/RL_audio/notebooks\n",
     "\n",
-    "%cd /Users/liamroy/Documents/Studies/Monash_31194990/PHD/repos/RL_audio/notebooks\n",
+    "%cd '/Users/liamroy/Library/CloudStorage/GoogleDrive-liam.roy@monash.edu/My Drive/LIAM ROY - ROBOTICS/User Study 02 - Auto State Expression/RL_audio/notebooks'\n",
     "\n",
     "# %cd <add your path here and comment out the others>"
    ]
@@ -208,9 +208,9 @@
     "    for col in row:\n",
     "        \n",
     "        if count == 0:\n",
-    "            \n",
     "            col.hist(accuracy_before_libA)\n",
     "            col.set_title(\"accuracy_before_libA\")\n",
+    "            \n",
     "        if count == 1:\n",
     "            col.hist(accuracy_before_libB)\n",
     "            col.set_title(\"accuracy_before_libB\")\n",
@@ -304,6 +304,14 @@
     "print(f\"TEST: steps to converge [sect2X no init]~[sect2O pilot init]   \\t HYPOTHESIS: improvement \\t STATISTIC: {result_steps_to_conv.statistic:.01f} \\t P-VALUE: {result_steps_to_conv.pvalue:.06f}\")\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd9378db-3b3a-4f32-b105-c8da325f59d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
