--- a/notebooks/study_notebook_V4.ipynb
+++ b/notebooks/study_notebook_V4.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "%cd /home/liamroy/Documents/PHD/repos/RL_audio/notebooks\n",
     "\n",
-    "# %cd '/Users/liamroy/Library/CloudStorage/GoogleDrive-liam.roy@monash.edu/My Drive/Robotics/User Study 02 - Auto State Expression/RL_audio/notebooks'\n",
+    "# %cd '/Users/liamroy/liam.roy@monash.edu - Google Drive/My Drive/Robotics/User Studies/study_02/RL_audio/notebooks'\n",
     "\n",
     "# %cd <add your path here and comment out the others>"
    ]
