--- a/notebooks/plots/matrix_plotter.ipynb
+++ b/notebooks/plots/matrix_plotter.ipynb
@@ -527,7 +527,7 @@
    ],
    "source": [
     "# Load an array\n",
-    "single_array = np.load('arrays/pilotset_st2.npy') # Stuck\n",
+    "single_array = np.load('arrays/llm_audio_testcase_struck.npy') # Stuck\n",
     "\n",
     "# Or use a custom array\n",
     "# single_array = np.array(\n",
@@ -1290,7 +1290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "phd",
    "language": "python",
    "name": "python3"
   },
